Fix overflow in resutls window, fix theme preference

--- a/src/app/components/typer/typer.component.scss
+++ b/src/app/components/typer/typer.component.scss
@@ -1,7 +1,5 @@
 .type-test-container {
-
   &.type-test-started {
-
     .type-test-timer-increase,
     .type-test-timer-decrease {
       pointer-events: none;
@@ -23,11 +21,13 @@
 
 .word-container-wrapper {
   width: 100%;
-  mask: linear-gradient(to right,
-      transparent 0%,
-      black 30%,
-      black 70%,
-      transparent 100%);
+  mask: linear-gradient(
+    to right,
+    transparent 0%,
+    black 30%,
+    black 70%,
+    transparent 100%
+  );
 }
 
 $word-center-offset: 80px;
@@ -49,12 +49,12 @@ $word-spacing: 20px;
   flex-shrink: 0;
 
   &.word-correct {
-    opacity: .2;
+    opacity: 0.2;
   }
 
   &.word-incorrect {
     color: #ff0000;
-    opacity: .2;
+    opacity: 0.2;
   }
 }
 
@@ -68,14 +68,14 @@ $word-spacing: 20px;
   padding: 0 0 0 calc(50% - #{$word-center-offset});
   width: 100%;
   caret-color: white;
-  transition: color .2s;
+  transition: color 0.2s;
 
   &.input-incorrect {
     color: rgb(255, 68, 68);
   }
 
   &::placeholder {
-    opacity: .3;
+    opacity: 0.3;
   }
 
   &:focus::placeholder {
@@ -118,19 +118,27 @@ $word-spacing: 20px;
     padding-right: 10px;
     width: 140px;
     max-width: 140px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    display: flex;
+
+    span {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      flex:1
+    }
+
+    .info-icon-tooltip-container {
+      flex: 0;
+      float: initial;
+    }
   }
 
   tr {
-
     &:nth-child(even) {
       background-color: rgba(128, 128, 128, 0.07);
     }
 
     &:last-child {
-
       th,
       td {
         padding-bottom: 12px;
@@ -139,7 +147,6 @@ $word-spacing: 20px;
   }
 
   .type-test-results-wpm {
-    
     th {
       text-align: center;
     }
@@ -160,7 +167,7 @@ $word-spacing: 20px;
 .type-test-timer {
   color: white;
   font-size: 2.5em;
-  opacity: .5;
+  opacity: 0.5;
 
   display: flex;
   justify-content: center;
@@ -174,13 +181,13 @@ $word-spacing: 20px;
 
   .type-test-timer-increase,
   .type-test-timer-decrease {
-    transition: opacity .5s;
+    transition: opacity 0.5s;
     cursor: pointer;
     padding: 8px;
-    opacity: .35;
+    opacity: 0.35;
     width: 24px;
     position: relative;
-    transition: opacity .2s;
+    transition: opacity 0.2s;
     border: none;
     background: no-repeat;
     display: block;
@@ -196,12 +203,10 @@ $word-spacing: 20px;
     }
 
     &:hover {
-
-      opacity: .7;
+      opacity: 0.7;
     }
 
     &:active {
-
       opacity: 1;
       transition: none;
     }
@@ -217,30 +222,25 @@ $word-spacing: 20px;
   background: no-repeat;
   display: block;
   box-sizing: content-box;
-  transition: opacity .2s;
-  opacity: .5;
+  transition: opacity 0.2s;
+  opacity: 0.5;
 
   svg {
-
     fill: rgba(255, 255, 255, 0.788);
   }
 
   &:hover {
-
-    opacity: .8;
+    opacity: 0.8;
 
     svg {
       transform: rotate(360deg);
-      transition: transform .5s;
+      transition: transform 0.5s;
     }
-
   }
 
   &:active {
-
     opacity: 1;
   }
-
 }
 
 .type-test-results-wpm th {
@@ -259,4 +259,4 @@ $word-spacing: 20px;
     font-size: 2em;
     padding-right: 10px;
   }
-} 
+}
